Reformulaçao do condigo por completo baiscamente fiz um novo

--- a/Calculadora.html
+++ b/Calculadora.html
@@ -3,49 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="Estilo.css">
+    <title>Calculadora</title>
+    <link rel="stylesheet" type="text/css" href="Estilo2.css">
 </head>
 <body>
-    <div class="container">
+    <section class="container">
 
-        <div class="resultados" id="resultados"> 
+        <header>
+            <input type="text" id="display" readonly />
+        </header>
 
-        </div>
+        <main>
+            <section class="bloco_botoes">
+                <button id="cinzas"> AC</button>
+                <button id="cinzas" onclick="limpar()"> C </button>
+                <button id="cinzas" onclick="operadores('%')"> % </button>
+                <button id="amarelo" onclick="operadores('/')"> / </button>
+            </section>
+            <section class="bloco_botoes">
+                <button onclick="adicionar(7)"> 7 </button>
+                <button onclick="adicionar(8)"> 8 </button>
+                <button onclick="adicionar(9)"> 9 </button>
+                <button id="amarelo" onclick="operadores('*')"> X </button>
+            </section>
+            <section class="bloco_botoes">
+                <button onclick="adicionar(4)"> 4 </button>
+                <button onclick="adicionar(5)"> 5 </button>
+                <button onclick="adicionar(6)"> 6 </button>
+                <button id="amarelo" onclick="operadores('-')"> - </button>
+            </section>
+            <section class="bloco_botoes">
+                <button onclick="adicionar(1)"> 1 </button>
+                <button onclick="adicionar(2)"> 2 </button>
+                <button onclick="adicionar(3)"> 3 </button>
+                <button id="amarelo" onclick="operadores('+')"> + </button>
+            </section>
+            <section class="bloco_botoes_inferior">
+                <button class="botao_0" onclick="adicionar(0)"> 0 </button>
+                <button class="botao_inferiores" onclick="operadores('%')"> . </button>
+                <button id="amarelo" class="botao_inferiores" onclick="calcular('=')"> = </button>
+            </section>
+        </main>
+    </section>
+        
 
-        <div class="resto">
-            <button onclick="clear()">CE</button>
-            <button onclick="clear()"> C </button>
-            <button onclick="appendOperator('%')"> % </button>
-            <button class="botoes_laranja"> <= </button>
-        </div>
-        <div class="primeira"> 
-            <button onclick="appendNumber(1)"> 1 </button>
-            <button onclick="appendNumber(2)"> 2 </button>
-            <button onclick="appendNumber(3)"> 3 </button>
-            <button class="botoes_laranja" onclick="appendOperator('/')"> / </button>
-        </div>
-        <div class="segunda"> 
-            <button onclick="appendNumber(4)"> 4 </button>
-            <button onclick="appendNumber(5)"> 5 </button>
-            <button onclick="appendNumber(6)"> 6 </button>
-            <button class="botoes_laranja" onclick="appendOperator('*')"> * </button>
-        </div>
-        <div class="terceira"> 
-            <button onclick="appendNumber(7)"> 7 </button>
-            <button onclick="appendNumber(8)"> 8 </button>
-            <button onclick="appendNumber(9)"> 9 </button>
-            <button class="botoes_laranja" onclick="appendOperator('-')"> - </button>
-        </div>
-        <div class="resto">
-            <button> . </button>
-            <button onclick="appendNumber(0)"> 0 </button>
-            <button onclick="appendOperator('+')"> + </button>
-            <button class="botoes_laranja" onclick="calculadora()"> = </button>
-        </div>
-    </div>
-
-    <script src="JS.js"></script> <!-- Conectando o JavaScript -->
+    <script src="JavaScripys.js"></script> <!-- Conectando o JavaScript -->
     
 </body>
 </html>
